--- a/public/monitoring/monitoring.css
+++ b/public/monitoring/monitoring.css
@@ -122,6 +122,8 @@
   outline: none;
   padding: 0;
   height: 24px;
+  position: relative;
+  z-index: 1;
 }
 
 .filter-input::placeholder {
@@ -145,6 +147,8 @@
   background-repeat: no-repeat;
   background-position: right 0 center;
   padding-right: 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .filter-select option {
